# openmp-example

./: .gitignore  CMakeLists.txt  PS5_problem2.cpp  PS5_problem4.cpp  README.md  jenProb2.cpp  main.cpp  openmpexample.pro  q-openmp-example.pro
